fixed margin collapse

--- a/sqlAlchemy/blogly/frontend/src/style/Posts.css
+++ b/sqlAlchemy/blogly/frontend/src/style/Posts.css
@@ -29,3 +29,10 @@ a:hover {
 .Posts-post-icon{
   color: grey;
 }
+
+.underline {
+  /* display: inline-block;
+  border-bottom: 1px solid #000;
+  text-decoration: none; */
+  /* To remove default text underline */
+}
