--- a/sqlAlchemy/blogly/frontend/src/style/Projects.css
+++ b/sqlAlchemy/blogly/frontend/src/style/Projects.css
@@ -12,18 +12,33 @@
   min-height: 25vh;
 }
 
-.Projects-project{
-  position: relative;
+/* .Projects-project{
   border: none;
   border-bottom: 1px solid grey;
-  /* border-radius: 0;
-  border-radius: 10px 10px 0 0; */
-  /* width: 100%; */
+
+} */
+
+/* corrects the curved affect of the bottom border due to margin-collapsing  */
+.Projects-project {
+  position: relative;
+  border: none;
+}
+
+.Projects-project::after {
+  content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #808080;
 }
 
 .selected {
-  /* text-shadow: 2px 4px 4px rgba(3, 19, 49, 0.9); */
-  /* box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2); */
-  box-shadow: inset 0em -.4em lightgray;
+  font-weight: 400;
+  color: grey;
+  box-shadow: inset 0em -.2em lightgray;
+  border-bottom: 0px;
 }
 
